# video_compressor

./: .gitignore  LICENSE  MANIFEST.in  PROPOSAL.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml  release.yml
openspec/changes/h264-optimized-lossless-compression-by-transcoding-to-h265-or-av1-codec-using-gpu-nvidia-acceleration/: design.md  proposal.md  tasks.md
openspec/changes/h264-optimized-lossless-compression-by-transcoding-to-h265-or-av1-codec-using-gpu-nvidia-acceleration/specs/gpu-accelerated-codec-transcoding/: spec.md
openspec/changes/h264-optimized-lossless-compression-by-transcoding-to-h265-or-av1-codec-using-gpu-nvidia-acceleration/specs/visually-lossless-compression-targeting/: spec.md
scripts/: run_option_matrix.py  sync_version.py
tests/: test_cli.py  test_inputs.py  test_models.py  test_profiles.py  test_quality.py  test_transcode.py
tests/integration/: test_encode_smoke.py
videocompress/: __init__.py  __main__.py  capabilities.py  cli.py  ffprobe_info.py  gui.py  inputs.py  models.py  profiles.py  quality.py  reporting.py  transcode.py
