[project]
name = "videocompress"
version = "0.1.0"
description = "GPU-accelerated H.264 to H.265/AV1 compressor with NVIDIA NVENC and quality-aware optimization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["video", "compression", "hevc", "av1", "nvenc", "gpu", "ffmpeg", "transcode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/videocompress"
Repository = "https://github.com/YOUR_USERNAME/videocompress"
Issues = "https://github.com/YOUR_USERNAME/videocompress/issues"

[project.scripts]
videocompress = "videocompress.cli:main"
videocompress-gui = "videocompress.gui:launch"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["videocompress*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["videocompress"]
