[project]
name = "transcoder-h265-av1"
version = "0.1.0"
description = "GPU-accelerated H.264 to H.265/AV1 compressor with NVIDIA NVENC and quality-aware optimization"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["video", "compression", "hevc", "av1", "nvenc", "gpu", "ffmpeg", "transcode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "ruff>=0.8.0",
    "pytest>=8.3.0",
]
test = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/Arkanthara/video_compressor"
Repository = "https://github.com/Arkanthara/video_compressor"
Issues = "https://github.com/Arkanthara/video_compressor/issues"

[project.scripts]
videocompress = "videocompress.cli:main"
videocompress-gui = "videocompress.gui:launch"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["videocompress*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["videocompress"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: requires ffmpeg and sample videos",
]
